# predicting-social-cost

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
marllib/envs/base_env/: __init__.py  gymnasium_mpe.py  mpe.py  wildfire.py
marllib/envs/base_env/config/: gymnasium_mpe.yaml  wildfire.yaml
marllib/envs/global_reward_env/: __init__.py  wildfire_fcoop.py
marllib/marl/: __init__.py  common.py
marllib/marl/algos/: run_cc.py  run_il.py  run_vd.py
marllib/marl/algos/core/CC/: coma.py  my_coma.py
marllib/marl/algos/core/IL/: dqn.py
marllib/marl/algos/hyperparams/common/: mappo.yaml
marllib/marl/algos/hyperparams/finetuned/mpe/: iql.yaml  mappo.yaml
marllib/marl/algos/hyperparams/finetuned/smac/: qmix.yaml
marllib/marl/algos/hyperparams/test/: coma.yaml  idqn.yaml  ippo.yaml  iql.yaml  mappo.yaml  qmix.yaml
marllib/marl/algos/scripts/: __init__.py  coma.py  idqn.py
marllib/marl/algos/utils/: wildfire_metric_callback.py
marllib/marl/ray/: ray.yaml
policy_eval/: agent_metrics.py  ccm.py  eval.py  monte_carlo_pe.py  policy_postprocessing.py  render.py  social_cost.py  utils.py  value_estimate_vs_sample_size.py
