[tool.poetry]
name = "state-dependent-price-of-anarchy"
version = "0.1.0"
description = "Contains code to train MARL agents using MARLlib, perform Monte Carlo policy evaluation, compute state-dependent price of anarchy and generate visualizations for heuristic metrics in wildfire env to understand agent behaviour"
authors = ["Niket Parikh <niketnp2@illinois.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
